Edited wiki page Index through web user interface.

--- a/wiki/Index.wiki
+++ b/wiki/Index.wiki
@@ -11,15 +11,17 @@ Prices are always in us dollars. Airport Code must be IATA Code.
 
 = Install =
 
-Download the source code from [http://code.google.com/p/busca-vuelos/downloads/list here] 
+*Download the source code from [http://code.google.com/p/busca-vuelos/downloads/list here] 
 
-Extract the source code 
+*Extract the source code 
+
+*Copy busca_vuelo to your python modules folder.
 
 = Examples =
-first launch ipython
+
 
 == Interactive Mode ==
-<code>
+<code language="python">
 In [11]: import busca_vuelo
 In [12]: busca_vuelo.get_flights()
 #Fecha de Partida( en formato YYYYMMDD)
@@ -53,8 +55,9 @@ Out[12]:
 == Using Time Deltas ==
 Use a time delta to look for the cheapest flight within a time interval
 
-=== substracting delta days to the return date ===
-<code>
+=== Negative time delta ===
+It will search flights into the time interval [departure date, return date (+,-,delta)]
+{{{
 import busca_vuelo
 #airport codes must be iata codes
 kwargs = {"source":"BUE","destination":"FRA","delta_dt_vuelta":12,"silent":True}
@@ -64,15 +67,43 @@ Fecha de Partida( en formato YYYYMMDD)
 20111228
 Fecha de Vuelta( en formato YYYYMMDD)
 20120530
+#Sort result using price 
+for r in sorted(vuelos,key=lambda x: x[0]["precio"])[0:5]:
+	v = r[0]
+	print "%s %s USD a %s el %s en %s escalas volviendo %s" % ("-".join(v["compania"]),v["precio"], v["dest"], v["saliendo"],v["escalas"]-1,v["arrivando"])
+
+}}}
+Outputs the top 5 cheapest flights
+
+*Lufthansa 1323 USD a Frankfurt el 28/12/2011 en 0 escalas volviendo 29/05/2012
+
+*Lufthansa 1323 USD a Frankfurt el 28/12/2011 en 0 escalas volviendo 22/05/2012
+
+*Lufthansa 1372 USD a Frankfurt el 28/12/2011 en 0 escalas volviendo 30/05/2012
+
+*Lufthansa 1372 USD a Frankfurt el 28/12/2011 en 0 escalas volviendo 28/05/2012
+
+*Lufthansa 1372 USD a Frankfurt el 28/12/2011 en 0 escalas volviendo 25/05/2012
+
+== Positive Time Delta ==
+The same idea but moving forward the departure date. This example will search flights into the interval [departure_date(+,-,5),return_date(+-,15)] 
+{{{
+kwargs ={"source":"BUE","destination":"FRA","delta_dt_ida":5,"delta_dt_vuelta":12,"silent":True}
+vuelos = busca_vuelo.get_flights(**kwargs)
+#It takes a little while...
+#using silent=False prints search progress
+#Prompts for departue and return date
+Fecha de Partida( en formato YYYYMMDD)
+20111228
+Fecha de Vuelta( en formato YYYYMMDD)
+20120530
 
 for r in sorted(vuelos,key=lambda x: x[0]["precio"])[0:5]:
 	v = r[0]
 	print "%s %s USD a %s el %s en %s escalas volviendo %s" % ("-".join(v["compania"]),v["precio"], v["dest"], v["saliendo"],v["escalas"]-1,v["arrivando"])
-</code>
-Outputs the top 5 cheapest flights
+}}}
 
-Lufthansa 1323 USD a Frankfurt el 28/12/2011 en 0 escalas volviendo 29/05/2012
-Lufthansa 1323 USD a Frankfurt el 28/12/2011 en 0 escalas volviendo 22/05/2012
-Lufthansa 1372 USD a Frankfurt el 28/12/2011 en 0 escalas volviendo 30/05/2012
-Lufthansa 1372 USD a Frankfurt el 28/12/2011 en 0 escalas volviendo 28/05/2012
-Lufthansa 1372 USD a Frankfurt el 28/12/2011 en 0 escalas volviendo 25/05/2012
+=== Exponential Backoff ===
+It's possible to disable exponential backoff.
+Disabling exponential backoff is recommended in case it is used with silent mode on.
+Just add the parameters backoff= False or add it to the kwargs dictionary.
